Add getTileMatrixSet
